# Google-form-parser

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  google_form_parser.py  link.txt  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: ADR.md  AUDIT_REPORT.md
src/google_form_parser/: __init__.py  app.py  cli.py  html_parser.py  live_runner.py  models.py  rich_text.py  workflow.py
tests/: test_cli.py  test_html_parser.py  test_workflow.py
tests/fixtures/: question_types.html  simple_form_page1.html  simple_form_page2.html
